--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "node index.js",
+    "dev": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -19,5 +21,8 @@
   "homepage": "https://github.com/ZherikovaPolina/backend-course-2025-4#readme",
   "dependencies": {
     "commander": "^14.0.1"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.10"
   }
 }
