--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node main.js",
-    "dev": "nodemon main.js",
+    "dev": "nodemon -- ./main.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
