--- a/package.json
+++ b/package.json
@@ -20,8 +20,7 @@
   },
   "homepage": "https://github.com/ZherikovaPolina/backend-course-2025-4#readme",
   "dependencies": {
-    "commander": "^14.0.1",
-    "fast-xml-parser": "^5.3.0"
+    "commander": "^14.0.1"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
